<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="#E5DBBF"
    android:orientation="horizontal"
    android:layout_marginVertical="5dp"
    >

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="134dp"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:scaleType="fitStart"
        android:src="@drawable/happireshipi_logo_launcher"
        android:contentDescription="@string/dish_image"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/recipe_name"
            android:textColor="#3E3425"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="2dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/substractButton"
                android:layout_width="69dp"
                android:layout_height="50dp"
                android:backgroundTint="#E5DBBF"
                android:text="@string/minus_symbol"
                android:textColor="#3E3425"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/portionsNumberInput"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:hint="@string/portions_number_input" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="69dp"
                android:layout_height="50dp"
                android:backgroundTint="#E5DBBF"
                android:text="@string/plus_symbol"
                android:textColor="#3E3425"
                android:textSize="30sp" />
        </LinearLayout>

        <Button
            android:id="@+id/addDishToList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#3E3425"
            android:scaleType="centerInside"
            android:text="@string/add_button_text"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
