<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="581dp">

        <LinearLayout
            android:id="@+id/recipeDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E5DBBF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recipeDetailName"
                    android:layout_width="264dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/recipe_name"
                    android:textColor="#3E3425"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/recipeDetailCloseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E5DBBF"
                    android:text="@string/details_close_button"
                    android:textColor="#000000" />

            </LinearLayout>

            <ImageView
                android:id="@+id/recipeDetailImage"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/happireshipi_logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/details_ingredients"
                android:textColor="#3E3425"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDetailIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/details_preparing"
                android:textColor="#3E3425"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipeDetailSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/details_recipe_steps" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>